# Noctis-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
bonjour_rendering/: CMakeLists.txt
bonjour_rendering/include/bjr/: bonjour.hpp  window.hpp
bonjour_rendering/include/bjr/core/: bonjour.hpp  error.hpp  window.hpp
bonjour_rendering/include/bjr/math/: color.hpp
bonjour_rendering/include/bjr/rendering/: camera.hpp  graphics_ctx.hpp  handler.hpp  shader.hpp  ssbo.hpp  uniform_buffer.hpp  vertex_array.hpp
bonjour_rendering/include/bjr/rendering/opengl/: ogl_graphics_ctx.hpp  ogl_handler.hpp  ogl_shader.hpp  ogl_ssbo.hpp  ogl_uniform_buffer.hpp  ogl_vertex_array.hpp
bonjour_rendering/src/: window.cpp
bonjour_rendering/src/core/: bonjour.cpp  window.cpp
bonjour_rendering/src/rendering/: camera.cpp  shader.cpp  ssbo.cpp  uniform_buffer.cpp  vertex_array.cpp
bonjour_rendering/src/rendering/opengl/: ogl_graphics_ctx.cpp  ogl_handler.cpp  ogl_shader.cpp  ogl_ssbo.cpp  ogl_uniform_buffer.cpp  ogl_vertex_array.cpp
include/noctis_engine/: noctis_engine.hpp
include/noctis_engine/asset/: asset_handle.hpp  asset_manager.hpp  loading.hpp
include/noctis_engine/core/: assert.hpp  logging.hpp  scene.hpp
include/noctis_engine/ecs/components/: transform.hpp
include/noctis_engine/input/: input_system.hpp  key.hpp
include/noctis_engine/math/: color.hpp
include/noctis_engine/rendering/: camera.hpp  graphics_handler.hpp  handler.hpp  render_state.hpp  shader.hpp  ssbo.hpp  texture.hpp  uniform_buffer.hpp  vertex.hpp  vertex_array.hpp  window.hpp
include/noctis_engine/rendering/opengl/: ogl_handler.hpp  ogl_shader.hpp  ogl_ssbo.hpp  ogl_uniform_buffer.hpp  ogl_vertex_array.hpp
noctis_engine/: CMakeLists.txt
noctis_engine/include/noctis_engine/: noctis_engine.hpp
noctis_engine/include/noctis_engine/asset/: asset_handle.hpp  asset_manager.hpp  loading.hpp
noctis_engine/include/noctis_engine/core/: application.hpp  assert.hpp  entrypoint.hpp  exception.hpp  format.hpp  logging.hpp  scene.hpp
noctis_engine/include/noctis_engine/debug/: debug_ui.hpp
noctis_engine/include/noctis_engine/debug/widget/: debug_widget.hpp  stats_widget.hpp
noctis_engine/include/noctis_engine/ecs/: ecs.hpp  entity.hpp
noctis_engine/include/noctis_engine/ecs/component/: sprite2D.hpp  transform.hpp  transform2D.hpp
noctis_engine/include/noctis_engine/ecs/system/: system.hpp  system_storage.hpp
noctis_engine/include/noctis_engine/input/: input_system.hpp  mouse.hpp
noctis_engine/include/noctis_engine/math/: color.hpp  math.hpp
noctis_engine/include/noctis_engine/rendering/: bindless_texture.hpp  buffer_utils.hpp  camera.hpp  camera2D.hpp  camera_data.hpp  command_buffer.hpp  gpu_buffer.hpp  graphics_handler.hpp  mesh_info.hpp  mesh_manager.hpp  mesh_view.hpp  renderer.hpp  renderer3D.hpp  shader.hpp  shader_bindings.hpp  ssbo.hpp  texture.hpp  uniform_buffer.hpp  vertex.hpp  vertex_array.hpp  window.hpp
noctis_engine/include/noctis_engine/rendering/2d/: camera2D.hpp  renderer2D.hpp
noctis_engine/include/noctis_engine/rendering/material/: material.hpp  material_manager.hpp
noctis_engine/include/noctis_engine/rendering/mesh/: default_meshes.hpp  mesh_info.hpp  mesh_manager.hpp
noctis_engine/include/noctis_engine/rendering/window/: window.hpp  window_event.hpp
noctis_engine/include/noctis_engine/utils/: sparse_set.hpp
noctis_engine/src/asset/: asset_manager.cpp
noctis_engine/src/core/: scene.cpp
noctis_engine/src/debug/: debug_ui.cpp
noctis_engine/src/debug/widget/: stats_widget.cpp
noctis_engine/src/ecs/component/: sprite2D.cpp  transform.cpp  transform2D.cpp
noctis_engine/src/ecs/system/: system_storage.cpp
noctis_engine/src/input/: input_system.cpp
noctis_engine/src/rendering/: bindless_texture.cpp  camera.cpp  camera2D.cpp  command_buffer.cpp  gpu_buffer.cpp  graphics_handler.cpp  material_manager.hpp  mesh_manager.cpp  renderer.cpp  renderer3D.cpp  shader.cpp  ssbo.cpp  texture.cpp  vertex_array.cpp  window.cpp
noctis_engine/src/rendering/2d/: camera2D.cpp  renderer2D.cpp
noctis_engine/src/rendering/material/: material_manager.cpp
noctis_engine/src/rendering/mesh/: mesh_manager.cpp
noctis_engine/src/rendering/window/: window.cpp
src/asset/: asset_manager.cpp  loading.cpp
src/input/: input_system.cpp
src/rendering/: camera.cpp  graphics_handler.cpp  render_state.cpp  shader.cpp  ssbo.cpp  texture.cpp  uniform_buffer.cpp  vertex_array.cpp  window.cpp
src/rendering/opengl/: ogl_handler.cpp  ogl_shader.cpp  ogl_ssbo.cpp  ogl_uniform_buffer.cpp  ogl_vertex_array.cpp
testing/: CMakeLists.txt  main.cpp  main.h  test_shader.glsl
